# HabaneroEngine

./: .gitignore  .travis.yml  README.md
Habanero/: CMakeLists.txt  Habanero.sln  Habanero.vcxproj  Habanero.vcxproj.filters  main.cpp  test.entity  testScene.entity
Habanero/Debug/Habanero.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Habanero.lastbuildstate
Habanero/common/: VapeGL.h  quatUtils.h  util.h
Habanero/components/: CameraComponent.h  Script.cpp  ScriptComponent.h  TransformComponent.h  VisualComponent.cpp  VisualComponent.h
Habanero/core/: GameObject.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Habanero/ecs/: EntityConstructor.h
Habanero/editor/: Editor.h  EditorController.cpp
Habanero/engine/core/: Engine.cpp  Engine.h  Scene.cpp  Scene.h  util.h
Habanero/imgui/: imgui.ini  imgui_impl_glfw_gl3.cpp
Habanero/input/: InputManager.cpp  InputManager.h  InputMessage.h
Habanero/jahbal/: Mesh.cpp  Mesh.h  Model.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  SubMesh.cpp  SubMesh.h  TransformComponent.cpp  TransformComponent.h  VisualComponent.cpp
Habanero/jahbal/common/: Camera.cpp  Camera.h  Component.h  GeometryGenerator.h  Light.cpp  Light.h  Material.h
Habanero/jahbal/components/: BillboardComponent.h  BillboardVisual.h  LightComponent.h  MeshComponent.h  MeshVisual.h  TerrainComponent.h  TerrainVisual.h
Habanero/jahbal/creators/: BufferCreator.h  MeshCreator.cpp  MeshCreator.h
Habanero/jahbal/fx/: JBillboard.cpp  JBillboard.h  JGeneric.cpp  JGeneric.h  JQuadTess.cpp  JQuadTess.h  JTerrain.cpp  JTerrain.h
Habanero/jahbal/renderers/: JRenderer.cpp  JRenderer.h
Habanero/jahbal/shaders/: Billboard.cod  Billboard.fx  Billboard.fxo  Defs.fx  Generic.cod  Generic.fx  Generic.fxo  LightFuncs.fx  QuadTess.cod  QuadTess.fx  QuadTess.fxo  Terrain.cod  Terrain.fx  Terrain.fxo
Habanero/jahbal/util/: GeometryGenerator.cpp  GeometryGenerator.h  dxmacros.h
Habanero/shaders/: fragment_shader.glsl
Habanero/systems/: CameraSystem.cpp  CameraSystem.h  RenderSystem.h  ScriptSystem.h  TransformSystem.cpp
Habanero/test_object/: Player.cpp
Test/: custom_model.dds
Tutorial/: CMakeLists.txt  main.cpp
Tutorial/common/: CameraController.cpp  CameraController.h  loadShaders.cpp
Tutorial/shaders/: fragment_shader.glsl  vertex_shader.glsl
VapeEngine/: '  CMakeLists.txt  main.cpp
VapeEngine/camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraSystem.cpp  CameraSystem.h
VapeEngine/common/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  GameManager.cpp  GameManager.h  InputListener.cpp  InputListener.h  InputManager.cpp  InputManager.h  InputMessage.h  VapeGL.h  loadShaders.h  quatUtils.h  util.h
VapeEngine/components/: BoxColliderComponent.h  CameraComponent.h  ColliderComponent.h  CollisionHandlerComponent.h  RenderableComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  Script.cpp  ScriptComponent.h  SphereColliderComponent.h  TransformComponent.h
VapeEngine/core/: Engine.cpp  Engine.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
VapeEngine/ecs/: ConstructorFunctions.cpp  ConstructorFunctions.h  EntityConstructor.cpp  EntityConstructor.h  ecs.cpp  ecs.h
VapeEngine/editor/: Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  EditorController.cpp  EditorController.h
VapeEngine/input/: InputListener.cpp  InputListener.h  InputManager.cpp  InputManager.h  InputMessage.h
VapeEngine/logging/: LogManager.cpp  LogManager.h  LogMessage.h  logMessage.h  logger.cpp  logger.h  logger.ui
VapeEngine/patterns/: Component.cpp  Component.h
VapeEngine/persistence/: PersistenceManager.cpp  PersistenceManager.h
VapeEngine/physics/: AABB.h  Sphere.h  VapePhysics.cpp  VapePhysics.h
VapeEngine/render/: ModelRenderer.cpp  ModelRenderer.h  PrimitiveShapes.h  RenderManager.cpp  RenderManager.h  RenderSystem.cpp  RenderSystem.h
VapeEngine/render/assets/cube/: cube.dds
VapeEngine/render/assets/cylinder/: cylinder.dds
VapeEngine/render/assets/pyramid/: pyramid.dds
VapeEngine/render/assets/sphere/: sphere.dds
VapeEngine/render/util/: objloader.cpp  objloader.h  texture.h  vboindexer.h
VapeEngine/renderer/: ModelRenderer.cpp  ModelRenderer.h  ObjectRenderer.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  PrimitiveShapes.h  RenderManager.cpp  RenderManager.h
VapeEngine/renderer/util/: texture.cpp  texture.h
VapeEngine/script/: LookAtScript.cpp  LookAtScript.h  PlayerMovementScript.cpp  PlayerMovementScript.h  ScriptSystem.cpp
VapeEngine/shaders/: model_vertex_shader.glsl  vertex_shader.glsl
VapeEngine/systems/: CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  TransformSystem.cpp  TransformSystem.h
VapeEngine/testScenes/: bugFree.scn  colliders.scn  demo.scn  newColliders.scn  testPlaneScene.scn  testScene.scn
VapeEngine/test_object/: Player.cpp  Player.h
VapeEngine/transform/: transformUtils.h
VapeEngine_old/common/: VapeGL.h  loadShaders.h
VapeEngine_old/components/: RenderableComponent.h
VapeEngine_old/core/: Engine.cpp  Engine.h  GameObject.h
VapeEngine_old/ecs/: ConstructorFunctions.cpp  ConstructorFunctions.h  EntityConstructor.cpp  ecs.h
VapeEngine_old/editor/: Editor.cpp
VapeEngine_old/input/: InputListener.h
VapeEngine_old/logging/: LogManager.cpp  LogManager.h  LogMessage.h
VapeEngine_old/script/: PlayerMovementScript.cpp  PlayerMovementScript.h
VapeEngine_old/systems/: RenderSystem.cpp  ScriptSystem.cpp  TransformSystem.h
VapeEngine_old/test_object/: player.h
(+54 files in other folders)
